updated ejs tags after upgrading to new version

--- a/views/land.ejs
+++ b/views/land.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<%- include('header'); %>
 
 <h3>Nieuwsitems voor land <%- landen[id] %></h3>
 
@@ -18,4 +18,4 @@
     <% } %>
   <% } %>
 
-<% include footer %>
+<%- include('footer'); %>
