--- a/views/nieuws.ejs
+++ b/views/nieuws.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<%- include('header'); %>
 
 <section id="nieuwsitem">
 
@@ -54,4 +54,4 @@
 
 </section>
 
-<% include footer %>
+<%- include('footer'); %>
