--- a/views/categorie.ejs
+++ b/views/categorie.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<%- include('header'); %>
 
 <h3>Nieuwsitems voor categorie <%- categorieen[id] %></h3>
 
@@ -18,4 +18,4 @@
     <% } %>
   <% } %>
 
-<% include footer %>
+<%- include('footer'); %>
