--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<%- include('header'); %>
 
   <% var teller = 1; %>
   <% nieuws.forEach(function(item){ %>
@@ -16,4 +16,4 @@
     <% } %>
   <% teller++; }); %>
 
-<% include footer %>
+<%- include('footer'); %>
